@@ -38,7 +38,7 @@ static char tcpdev_inuse;
 static int tcpdev_read(struct inode *inode, struct file *filp, char *data,
 		       unsigned int len)
 {
-    debug1("TCPDEV: read called with room for %d bytes of data.\n",len);
+    debug4("TCPDEV: read( %p, %p, %p, %u )\n",inode,filp,data,len);
     while (tdout_tail == 0) {
 	if (filp->f_flags & O_NONBLOCK)
 	    return -EAGAIN;
@@ -52,9 +52,11 @@ static int tcpdev_read(struct inode *inode, struct file *filp, char *data,
      *  buffer it will lose data, so the tcpip stack should read BIG.
      */
     len = len < tdout_tail ? len : tdout_tail;
+    debug1("TCPDEV: read() mark 1 - len = %u\n",len);
     memcpy_tofs(data, tdout_buf, len);
     tdout_tail = 0;
     up(&bufout_sem);
+    debug1("TCPDEV: read() returning with bufout_sem = %d\n",bufout_sem);
     if (bufout_sem > 0)
 	panic("bufout_sem tragedy");
     return (int) len;
@@ -64,23 +66,25 @@ int tcpdev_inetwrite(char *data, unsigned int len)
 {
     __u16 ds;
 
-    debug1("TCPDEV: inetwrite called with %d bytes of data.\n", len);
+    debug2("TCPDEV: inetwrite( %p, %u )\n",data,len);
     if (len > TCPDEV_OUTBUFFERSIZE)
 	return -EINVAL;		/* FIXME: make sure this never happens */
+    debug("TCPDEV: inetwrite() mark 1.\n");
     down(&bufout_sem);
-    debug("TCPDEV: inetwrite() writing.\n");
 
     /* Copy the data to the buffer */
     ds = get_ds();
     fmemcpy(ds, (__u16) tdout_buf, ds, (__u16) data, (__u16) len);
     tdout_tail = len;
     wake_up(&tcpdevq);
+    debug("TCPDEV: inetwrite() returning\n");
     return 0;
 }
 
 void tcpdev_clear_data_avail(void)
 {
     up(&bufin_sem);
+    debug("TCPDEV: clear_data_avail()\n");
     if (bufin_sem > 0)
 	panic("bufin_sem tragedy");
 }
@@ -90,7 +94,7 @@ static int tcpdev_write(struct inode *inode, struct file *filp,
 {
     int ret;
 
-    debug1("TCPDEV: write called with %d bytes of data.\n", len);
+    debug4("TCPDEV: write( %p, %p, %p, %u )\n",inode,filp,data,len);
     if (len <= 0)
 	ret = 0;
     else {
@@ -104,46 +108,58 @@ static int tcpdev_write(struct inode *inode, struct file *filp,
 
 	ret = (int) len;
     }
+    debug1("TCPDEV: write() returning %d\n",ret);
     return ret;
 }
 
 int tcpdev_select(struct inode *inode, struct file *filp, int sel_type)
 {
+    int ret = 0;
+
+    debug3("TCPDEV: select( %p, %p, %d )\n",inode,filp,sel_type);
     switch (sel_type) {
     case SEL_OUT:
+	debug("TCPDEV: select() chose SEL_OUT\n");
 	if (bufin_sem == 0)
-	    return 1;
-	select_wait(&tcpdevq);
-	return 0;
+	    ret = 1;
+	else
+	    select_wait(&tcpdevq);
+	break;
     case SEL_IN:
+	debug("TCPDEV: select() chose SEL_IN\n");
 	if (tdout_tail != 0)
-	    return 1;
-	select_wait(&tcpdevq);
-	return 0;
+	    ret = 1;
+	else
+	    select_wait(&tcpdevq);
+	break;
+    default:
+	debug1("TCPDEV: select() chose unknown option %d.\n",sel_type);
+	break;
     }
-    return 0;
+    debug1("TCPDEV: select() returning %d\n",ret);
+    return ret;
 }
 
 static int tcpdev_open(struct inode *inode, struct file *file)
 {
-    debug("TCPDEV: open called.\n");
-
-    if(!suser())
+    debug2("TCPDEV: open( %p, %p )\n",inode,file);
+    if(!suser()) {
+	debug("TCPDEV: open() returning -EPERM\n");
     	return -EPERM;
-
-    if (tcpdev_inuse)
+    }
+    if (tcpdev_inuse) {
+	debug("TCPDEV: open() returning -EBUSY\n");
 	return -EBUSY;
-
+    }
     tdin_tail = tdout_tail = 0;
-
     tcpdev_inuse = 1;
+    debug("TCPDEV: open() returning 0\n");
     return 0;
 }
 
 int tcpdev_release(struct inode *inode, struct file *file)
 {
-    debug("TCPDEV: release called.\n");
-
+    debug2("TCPDEV: release( %p, %p )\n",inode,file);
     tcpdev_inuse = 0;
     return 0;
 }
@@ -173,8 +189,7 @@ void tcpdev_init(void)
 {
     register_chrdev(TCPDEV_MAJOR, "tcpdev", &tcpdev_fops);
 
-    debug("TCPDEV: init called.\n");
-
+    debug("TCPDEV: init()\n");
     bufin_sem = bufout_sem = 0;
     tcpdev_inuse = 0;
 }
